Fixed table overflow

--- a/_sass/_articles.scss
+++ b/_sass/_articles.scss
@@ -51,11 +51,13 @@
 
     table {
       display: table;
-      table-layout: fixed;
       overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+      max-width: 100%;
+      table-layout: fixed;
       white-space: nowrap;
-      width: 100%;
       margin: 1em 0;
+      min-width: 100%;
     }
 
     .katex-display {
